--- a/src/pages/menu/menu.html
+++ b/src/pages/menu/menu.html
@@ -31,7 +31,7 @@
         </ion-grid>
 <div  id="divContactUs">
   <button ion-button outline id="btnContactUs" (click)="OnPressLocation()" >
-    <ion-icon  id="icon" name="pin" ></ion-icon> Contact Us </button>
+    <ion-icon  id="icon" name="ios-chatbubbles" ></ion-icon> Send Message </button>
 </div>
 
       </ion-list>
