--- a/src/pages/main/main.html
+++ b/src/pages/main/main.html
@@ -51,8 +51,8 @@
             Contact Us</button>
         </ion-col>
         <ion-col id="colButtonAbout" col-4 >
-            <ion-icon (click)="OnPressAboutinGrid()"  id="iconButtonCol"  name="alert"></ion-icon>
-          <button id="colButtons" ion-button color="light" outline full >
+            <ion-icon   id="iconButtonCol"  name="alert"></ion-icon>
+          <button (click)="OnPressAboutinGrid()" id="colButtons" ion-button color="light" outline full >
             About </button>
         </ion-col>
       </ion-row>
