--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -9,79 +9,37 @@
     </ion-navbar>
   </ion-header>
 
-  <ion-content style="flex: 1" >
-   <ion-card style=" margin-left: 0px; margin-right: 0px;width:100%; background-color: #42AEE2" >
-     <ion-card-header>
-<h2 style="color:white;" >About Us</h2>
-     </ion-card-header>
-     <ion-card-content>
-        <h2 style="color:white;" >{{about}} </h2>
-     </ion-card-content >
-   </ion-card>
-   <h4 style="text-align-last: center">Popular Products</h4>
-   <ion-grid>
-     <ion-row>
-       <ion-col col-6>
-          <ion-card style=" margin-left: 0px; margin-right: 0px;width:100%; background-color: rgb(161, 201, 218)" >
-            <ion-card-header>
-              <h2 style="color:white;">{{proname1}}</h2>
-            </ion-card-header>
-           <ion-card-content>
+  <ion-content id="ionContent"  >
 
-             <h6 style="color:white;">{{proContent1}}</h6>
-           </ion-card-content>
+      <ion-card style="display: flex;
+      align-items: center;height: 200px;" id="ionCardService" >
+        <div>
+        <ion-card-header id="iconCardHeaderService" >
+          <h2 id="H2ServiceHeader" >{{AboutTitle}}</h2>
+          <h2 id="h2Service" >{{AboutHeader}}</h2>
 
-         </ion-card>
-       </ion-col>
-       <ion-col col-6>
-          <ion-card style=" margin-left: 0px; margin-right: 0px;width:100%; background-color: rgb(191, 196, 148)" >
-              <ion-card-header>
-                <h2 style="color:white;">{{proname2}}</h2>
-              </ion-card-header>
-             <ion-card-content>
+        </ion-card-header>
+        <ion-card-content id="ionCardConent" >
 
-               <h6 style="color:white;">{{proContent2}}</h6>
-             </ion-card-content>
+          <h6 id="h6ServiceContent" > {{AboutContent}} </h6>
+        </ion-card-content>
+      </div>
+      </ion-card>
+      <div *ngFor="let x of items">
+      <ion-card  id="ionCardDetail"  >
+        <ion-card-header >
 
-           </ion-card>
-       </ion-col>
+<h2> <ion-icon id="iconH2InTitle" name="md-checkbox-outline"
+ >
+  </ion-icon>{{x.Header}}</h2>
+        </ion-card-header>
+        <ion-card-content  >
+<h6 id="H6ContentService" > {{x.Contnet}}</h6>
 
-     </ion-row>
-     <ion-row>
-       <ion-col col-6>
-          <ion-card style=" margin-left: 0px; margin-right: 0px;width:100%; background-color:rgb(145, 105, 105);" >
-              <ion-card-header>
-                <h2 style="color:white;">{{proname3}}</h2>
-              </ion-card-header>
-             <ion-card-content>
+        </ion-card-content>
+      </ion-card>
+    </div>
 
-               <h6 style="color:white;">{{proContent3}}</h6>
-             </ion-card-content>
 
-           </ion-card>
-       </ion-col>
-       <ion-col col-6>
-          <ion-card style=" margin-left: 0px; margin-right: 0px;width:100%; background-color:rgb(144, 218, 208);" >
-              <ion-card-header>
-                <h2 style="color:white;">{{proname4}}</h2>
-              </ion-card-header>
-             <ion-card-content>
-
-               <h6 style="color:white;">{{proContent4}}</h6>
-             </ion-card-content>
-
-           </ion-card>
-        </ion-col>
-
-     </ion-row>
-     <ion-row>
-<ion-col col-4></ion-col>
-       <ion-col col-8>
-          <button   style="text-align: center"ion-button color="dark" (click)="OnPressPortfolio()" >Portfolio</button>
-       </ion-col>
-     </ion-row>
-
-   </ion-grid>
 
   </ion-content>
-
